Add workspace for image link unit test